<script src="~/Scripts/jquery-2.1.4.js"></script>     <script>         $(function () {             $("#button1").click(function () {                 $.ajax({                     type: "GET",                     url: "/Home/JsonData",                     data: "id=123&name=Mary",                     success: function (data) {                         console.log(data);                         $("#result").text(data.empId + "--" + data.EmpName + "--" + data.Age);                     }                 });             });         });     </script>

--- a/Mod09_01/Mod09_01.csproj
+++ b/Mod09_01/Mod09_01.csproj
@@ -112,6 +112,7 @@
     <Content Include="Views\Home\Index2.cshtml" />
     <Content Include="Views\Home\SelectorDemo.cshtml" />
     <Content Include="Views\Home\HoverDemo.cshtml" />
+    <Content Include="Views\Home\JsonData.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
